[package]
name = "leo_sim"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1"
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
eframe = { version = "0.29", default-features = true }
egui_plot = "0.29"
sgp4 = "2.3"
reqwest = { version = "0.12", features = ["blocking", "json"] }
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
